--- a/utils/Makefile
+++ b/utils/Makefile
@@ -2,9 +2,9 @@ TOP = ..
 include $(TOP)/Makefile.config
 PERL = $(TOP)/miniperl_top
 
-plextract = c2ph config_data corelist cpan h2ph h2xs instmodsh\
-	perlbug perldoc perlivp pl2pm prove ptar ptardiff cpanp-run-perl\
-       	cpanp cpan2dist shasum splain dprofpp libnetcfg piconv enc2xs xsubpp
+plextract = c2ph config_data corelist cpan h2ph h2xs instmodsh json_pp perlbug perldoc\
+	perlivp pl2pm prove ptar ptardiff ptargrep cpanp-run-perl cpanp cpan2dist shasum\
+	splain libnetcfg piconv enc2xs xsubpp pod2html zipdetails
 
 all: $(plextract) 
 
@@ -14,6 +14,10 @@ all: $(plextract)
 perlbug: ../patchlevel.h
 
 splain:	../lib/diagnostics.pm
+
+zipdetails:	zipdetails.PL ../config.sh
+
+pod2html:	pod2html.PL ../config.sh ../ext/Pod-Html/bin/pod2html
 
 clean:
 	rm -f $(plextract)
